<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/card_"
        app:cardElevation="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp">
        <RelativeLayout
            android:id="@+id/txt_layout"
            android:background="#0396AB"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8sdp"/>

            <TextView
                android:layout_below="@+id/txt_time"
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AskImAMDAte"
                android:fontFamily="@font/segoeuiregular"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:textAlignment="center"
                android:textColor="@color/white"/>


            <TextView
                android:layout_below="@id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4 jumadal Ula 1440 AH"
                android:fontFamily="@font/segoeuiregular"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:textAlignment="center"
                android:textColor="@color/white"
                />





        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_below="@id/card_"
        android:id="@+id/txt_adhan_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adhannotification"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_18sdp"
        android:textColor="#00587A"
        android:layout_marginLeft="@dimen/_10sdp"/>

    <Switch
        android:id="@+id/Switch_Notification_"
        android:layout_toEndOf="@id/txt_adhan_notification"
        android:layout_alignBaseline="@id/txt_adhan_notification"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:thumbTint="@color/colorPrimary"
        android:layout_marginRight="@dimen/_10sdp"/>



    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/viewPager"
        android:layout_below="@id/Switch_Notification_"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"


        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager"
        android:layout_marginTop="@dimen/_18sdp">

    <com.github.vivchar.viewpagerindicator.ViewPagerIndicator

        android:id = "@+id/view_pager_indicator"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_gravity = "center_horizontal|bottom"
        android:layout_centerHorizontal="true"
        app:delimiterSize = "8dp"
        app:itemScale = "1.2"
        app:itemSelectedTint = "#00587A"
        app:itemSize = "10dp"
        app:itemTint = "#8C00587A"
        />


    <ImageView
        android:id="@+id/right_nav"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_60sdp"

        android:background="@drawable/ic_right_arrow"
        android:layout_alignParentRight="true"
        />

    <ImageView
        android:id="@+id/left_nav"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_60sdp"

        android:background="@drawable/ic_left_arrow"
        android:layout_alignParentLeft="true"/>

    </RelativeLayout>


</RelativeLayout>